prevent long urls from overflowing

--- a/less/clean-blog.less
+++ b/less/clean-blog.less
@@ -7,6 +7,7 @@ body {
 	.serif;
 	font-size: 20px;
 	color: @gray-dark;
+	word-wrap: break-word;
 }
 
 // -- Typography
